--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="enter_pace">Enter Pace</string>
     <string name="exercise_name">Exercise name</string>
     <string name="enter_pause">Enter pause</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
