--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="enter_pause">Enter pause</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="val">Val</string>
+    <string name="series_count_format">%d.</string>
 
 </resources>
