--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="enter_load">Enter load</string>
     <string name="enter_reps">Enter reps</string>
     <string name="enter_series">Enter series</string>
-    <string name="enter_rpe">Enter RPE</string>
+    <string name="enter_rpe">Enter intensity</string>
     <string name="pace">Pace</string>
     <string name="enter_pace">Enter Pace</string>
     <string name="exercise_name">Exercise name</string>
