fixed input type for routine, chart scaling
also fixed some minor issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,19 +3,19 @@
     <string name="reps">Reps</string>
     <string name="series">Series</string>
     <string name="load">Load</string>
-    <string name="pause">Rest</string>
+    <string name="pause">Pause</string>
     <string name="progression">Progression</string>
     <string name="exercise">Exercise</string>
     <string name="rpe">RPE</string>
-    <string name="enter_exercise_name">Enter Exercise Name</string>
-    <string name="enter_load">Enter load</string>
-    <string name="enter_reps">Enter reps</string>
-    <string name="enter_series">Enter series</string>
-    <string name="enter_rpe">Enter intensity</string>
     <string name="pace">Pace</string>
-    <string name="enter_pace">Enter Pace</string>
+    <string name="enter_exercise_name">Enter Exercise Name</string>
+    <string name="enter_load">eg. 30</string>
+    <string name="enter_reps">eg. 6 or 6–8</string>
+    <string name="enter_series">eg. 3</string>
+    <string name="enter_rpe">eg. 5 or 5-6</string>
+    <string name="enter_pace">eg. 2110 or 21x0</string>
     <string name="exercise_name">Exercise name</string>
-    <string name="enter_pause">Enter rest</string>
+    <string name="enter_pause">eg. 3 or 3–5</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="val">Val</string>
     <string name="series_count_format">%d.</string>
